Fix action button on mobile.

--- a/components/byu-header/byu-header.sass
+++ b/components/byu-header/byu-header.sass
@@ -29,7 +29,7 @@ byu-header [slot=site-title] a, byu-header a[slot=site-title]
     background: $byuNavy
     min-height: $fontSize48
     @supports(display: grid)
-      @media(min-width: $breakSm)
+      @media(min-width: $break0)
         display: grid
         grid-template-columns: 4em auto
 
@@ -47,7 +47,7 @@ byu-header [slot=site-title] a, byu-header a[slot=site-title]
     text-decoration: none
 
     @supports(display: grid)
-      @media(min-width: $breakSm)
+      @media(min-width: $break0)
         // flex: 0 0 5em
         // min-width: 3.5em
         height: auto
@@ -72,7 +72,7 @@ byu-header [slot=site-title] a, byu-header a[slot=site-title]
       background: $dividerColor
 
     @supports(display: grid)
-      @media(min-width: $breakSm)
+      @media(min-width: $break0)
         align-self: center
 
         // Line should be vertical if header is in horizontal layout
@@ -122,7 +122,7 @@ byu-header [slot=site-title] a, byu-header a[slot=site-title]
     font-size: 1rem
 
   @supports(display: grid)
-    @media(min-width: $breakSm)
+    @media(min-width: $break0)
       grid-column: 1 / 3
       display: grid
       grid-template-columns: auto min-content
@@ -145,7 +145,7 @@ byu-header [slot=site-title] a, byu-header a[slot=site-title]
 
 byu-search
   @supports(display: grid)
-    @media(min-width: $breakSm)
+    @media(min-width: $break0)
       grid-column: 1 / 3
 
     @media(min-width: $breakMd)
@@ -167,7 +167,7 @@ byu-search
 byu-user-info
   @supports(display: grid)
 
-    @media(min-width: $breakSm)
+    @media(min-width: $break0)
       white-space: nowrap
 
     @media(min-width: $breakMd)
@@ -218,8 +218,8 @@ byu-user-info
     padding: 0.25em 0.85em
 
   @supports(display: grid)
-    @media(min-width: $breakSm)
-      padding: 0.5em
+    @media(min-width: $break0)
+      padding: 0.65em
       grid-column: 1 / 2
       grid-row: 2 / 3
       background-image: linear-gradient($grey10, #fff 5px, #fff 100%)
