--- a/components/byu-user-info/byu-user-info.sass
+++ b/components/byu-user-info/byu-user-info.sass
@@ -9,12 +9,13 @@
 .byu-id
   background: $grey05
   background-image: linear-gradient($grey10, #fff 4px, #fff 100%)
-  padding: 0.25em 0.65em
+  padding: 0.65em
   color: $byuNavy !important
   text-align: right
+  height: 100%
 
   @media(min-width: $breakMdSm)
-    padding: 0.25em 1.1em
+    padding: 0.65em 1.1em
 
   a, a:link, a:visited, ::slotted(*)
     color: $byuNavy !important
